# personal-site

./: .gitignore
backend/: Cargo.toml
backend/src/: blog.rs  git.rs  main.rs  mtg.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/assets/: blogtree.js  mtg.js
frontend/src/lib/: DisplayCard.svelte  FlipCard.svelte  Header.svelte  HighlightCard.svelte  SideBar.svelte  TheBanner.svelte  current_path.js
frontend/src/renderers/: Code.svelte  Image.svelte
frontend/src/routes/blog/: Blog.svelte  index.html  main.js
frontend/src/routes/home/: App.svelte  index.html
