[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }
git2 = "0.15.0"
serde = "1.0.152"